--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <td>
         <h1>Rustam Shah</h1>
         <p><em>Founder and CEO of <strong><a href="https://www.gizmoshop.nl/">Gizmo Shop</a></strong></em></p>
-        <p>I'm going to become a programmer in 2022 and earn lots of money! Starting from <strong><a href="https://www.datum.nl/9-12-2021">today</a></strong>!</p>
+        <p>I'm going to become a programmer in 2022 starting from <strong><a href="https://www.datum.nl/9-12-2021">today</a></strong>!</p>
       </td>
     </tr>
   </table>
