image not showing. Fix 2.0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="15">
     <tr>
       <td>
-        <img src="foto.png" alt="profile picutre" img height="200">
+        <img src="Images/foto.png" alt="profile picutre" img height="200">
       </td>
       <td>
         <h1>Rustam Shah</h1>
